# example-of-libotr-crash

./: CMakeLists.txt  README.txt  test-otr-key-generation.c
